--- a/index.html
+++ b/index.html
@@ -1,107 +1,197 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>❤️ For You ❤️</title>
+  <title>❤️ A Surprise For You ❤️</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
+    /* General Styles */
     body {
       margin: 0;
-      background: black;
-      font-family: Arial, sans-serif;
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+      overflow: hidden;
+      background: radial-gradient(circle at center, #ffdee9, #b5fffc);
     }
 
+    /* Heart Floating Animation */
+    .heart {
+      position: absolute;
+      font-size: 24px;
+      color: #ff4d6d;
+      animation: floatUp 5s linear infinite;
+      user-select: none;
+    }
+
+    @keyframes floatUp {
+      0% { transform: translateY(100vh) scale(0.5); opacity: 0; }
+      50% { opacity: 1; }
+      100% { transform: translateY(-50vh) scale(1.2); opacity: 0; }
+    }
+
+    /* Start Screen */
     #startScreen {
       height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(to bottom, #ffb6c1, #ffe4e1);
       text-align: center;
+      padding: 20px;
+      color: #d6336c;
+      animation: fadeIn 2s ease-in;
     }
 
     #startScreen h1 {
-      color: #d6336c;
-      font-size: 36px;
-      margin-bottom: 30px;
+      font-size: 48px;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 8px #fff;
+    }
+
+    #startScreen h2 {
+      font-size: 20px;
+      line-height: 1.5;
+      color: #800040;
+      margin-bottom: 40px;
+      text-shadow: 1px 1px 4px #fff;
     }
 
     button {
-      padding: 16px 28px;
-      font-size: 18px;
+      padding: 18px 36px;
+      font-size: 20px;
       background-color: #ff4d6d;
       color: white;
       border: none;
-      border-radius: 30px;
+      border-radius: 50px;
       cursor: pointer;
+      box-shadow: 0 5px 15px rgba(255, 77, 109, 0.6);
+      transition: transform 0.2s;
     }
 
-    #photoScreen {
-      display: none;
-      height: 100vh;
-      width: 100vw;
-      position: relative;
-      background: black;
+    button:hover {
+      transform: scale(1.1);
     }
 
-    #photoScreen img {
-      width: 100vw;
-      height: 100vh;
-      object-fit: contain; /* shows full image without cutting */
+    @keyframes fadeIn {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
     }
 
+    /* Hearts container */
+    #heartsContainer {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 10; /* above all content */
+    }
+
+    /* Photo Screen Button Animation */
     #audioBtn {
       position: absolute;
       bottom: 35px;
       left: 50%;
       transform: translateX(-50%);
       display: none;
-      padding: 14px 26px;
-      font-size: 17px;
-      background-color: rgba(255, 77, 109, 0.9);
+      padding: 16px 30px;
+      font-size: 18px;
+      background-color: #ff4d6d;
+      color: white;
+      border-radius: 50px;
+      cursor: pointer;
+      animation: pulse 1.5s infinite;
+      z-index: 20;
+    }
+
+    @keyframes pulse {
+      0% { transform: translateX(-50%) scale(1); }
+      50% { transform: translateX(-50%) scale(1.2); }
+      100% { transform: translateX(-50%) scale(1); }
+    }
+
+    /* Instruction text above button */
+    #instructionText {
+      position: absolute;
+      bottom: 120px;
+      left:50%;
+      transform: translateX(-50%);
+      color:white;
+      font-size:16px;
+      text-shadow:2px 2px 5px #000;
+      z-index: 20;
     }
   </style>
 </head>
 
 <body>
+  <!-- Hearts floating in background (works on both screens) -->
+  <div id="heartsContainer"></div>
 
   <!-- First Screen -->
   <div id="startScreen">
-    <h1>❤️ I Love You ❤️</h1>
-    <h2>“I didn’t just fall in love with you… I grew into it.<br>
-You were my best friend first, and then you slowly became my heart.<br>
-Somewhere between friendship and love, you became my forever.<br>
-And now, my happiness begins and ends with you.”</h2>
-<br><br>
-    <button onclick="showPhoto()">Tap for Surprise 💕</button>
+    <h1>❤️ To My Forever Love ❤️</h1>
+    <h2>
+      “I didn’t just fall in love with you… I grew into it.<br> 
+      You were my best friend first, and then you slowly became my heart.<br> 
+      Somewhere between friendship and love, you became my forever.<br> 
+      And now, my happiness begins and ends with you.”<br><br>
+      Tap below to see the love I made just for you 💕
+    </h2>
+    <button onclick="showPhoto()">Tap For Your Surprise 💖</button>
   </div>
 
   <!-- Full Screen Image -->
-  <div id="photoScreen">
-    <img src="mine.png" alt="Valentine Image">
-    <button id="audioBtn" onclick="playVoice()">Hear Me 🎧</button>
+  <div id="photoScreen" style="display:none; height:100vh; width:100vw; position:relative; background:black;">
+    <img src="mine.png" alt="Valentine Image" style="width:100vw; height:100vh; object-fit:contain; z-index:1;">
+
+    <!-- Audio Button -->
+    <button id="audioBtn" onclick="toggleVoice()">Hear Me 🎧</button>
   </div>
 
+  <!-- Audio -->
   <audio id="voice">
     <source src="voice.m4a" type="audio/mpeg">
   </audio>
 
   <script>
+    // Show photo screen
     function showPhoto() {
       document.getElementById("startScreen").style.display = "none";
       document.getElementById("photoScreen").style.display = "block";
+      document.getElementById("audioBtn").style.display = "block";
+    }
 
-      // show Hear Me button after image is visible
+    // Toggle play/pause audio
+    function toggleVoice() {
+      const audio = document.getElementById("voice");
+      const btn = document.getElementById("audioBtn");
+
+      if (audio.paused) {
+        audio.play();
+        btn.innerText = "Pause 🎧";
+      } else {
+        audio.pause();
+        btn.innerText = "Hear Me 🎧";
+      }
+    }
+
+    // Create floating hearts
+    const heartsContainer = document.getElementById('heartsContainer');
+    function createHeart() {
+      const heart = document.createElement('div');
+      heart.classList.add('heart');
+      heart.innerText = '❤️';
+      heart.style.left = Math.random() * window.innerWidth + 'px';
+      heart.style.fontSize = (20 + Math.random()*30) + 'px';
+      heart.style.animationDuration = (3 + Math.random()*5) + 's';
+      heartsContainer.appendChild(heart);
+
       setTimeout(() => {
-        document.getElementById("audioBtn").style.display = "block";
-      }, 2000);
+        heart.remove();
+      }, 6000);
     }
 
-    function playVoice() {
-      document.getElementById("voice").play();
-    }
+    setInterval(createHeart, 300);
   </script>
-
 </body>
 </html>
