--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
   <!-- Photo Screen -->
   <div id="photoScreen">
-    <img src="mine.png" alt="Valentine Image">
+    <img src="minee.png" alt="Valentine Image">
     <button id="audioBtn" onclick="toggleVoice()">Hear Me 💖</button>
   </div>
 
@@ -197,4 +197,5 @@
 
 </body>
 </html>
+
 
