--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
   <!-- Audio -->
   <audio id="voice">
-    <source src="voice.m4a" type="audio/mp4">
+    <source src="voicee.m4a" type="audio/mp4">
   </audio>
 
   <script>
@@ -169,10 +169,10 @@
 
       if (audio.paused) {
         audio.play();
-        btn.innerText = "Pause 🎧";
+        btn.innerText = "Pause 💖";
       } else {
         audio.pause();
-        btn.innerText = "Hear Me 🎧";
+        btn.innerText = "Hear Me 💖";
       }
     }
 
@@ -197,3 +197,4 @@
 
 </body>
 </html>
+
